Fix system design modal overflow on small viewports

--- a/static/style.css
+++ b/static/style.css
@@ -201,6 +201,7 @@ body {
     max-width: 680px;
     width: 100%;
     max-height: 85vh;
+    overflow-x: hidden;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -243,6 +244,8 @@ body {
 
 .modal-img-wrap img {
     width: 100%;
+    max-width: 100%;
+    height: auto;
     display: block;
 }
 
